# yoto-smart-stream

./: .env.example  .gitignore  .pre-commit-config.yaml  .yoto_refresh_token  ACCESSIBILITY_AUTOCOMPLETE_GUIDE.md  ACTION_REQUIRED.md  ACTION_REQUIRED_RAILWAY_VOLUMES.md  ADMIN_EDIT_FEATURE_v0.3.9.md  ARCHITECTURE.md  ASSET_DELIVERY_AND_FIXES_SUMMARY.md  AWS_DEPLOYMENT_COMPLETE.md  AWS_DEPLOYMENT_STATUS.md  AWS_QUICK_REFERENCE.md  BRANCH_DEPLOYMENT_IMPLEMENTATION.md  COPILOT_WORKSPACE_CONFIG_COMPLETE.md  COVER_ART_TEST_REPORT.md  DELIVERY_SUMMARY.md  DEPLOYMENT_NEXT_STEPS.md  DEPLOYMENT_SETUP_COMPLETE.md  DEPLOYMENT_TEST_PLAN.md  DEPLOYMENT_v0.3.8.md  DEPLOY_AND_TEST_INSTRUCTIONS.md  DEPLOY_TO_DEVELOPMENT.md  DUAL_MODE_PLAYLIST_COMPLETE.md  DYNAMODB_IMPLEMENTATION.md  GETTING_STARTED.md  GITHUB_SECRETS_SETUP.md  IMPLEMENTATION_ADMIN_UI.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_YOTO_CLIENT_ID.md  IMPLEMENTATION_SOLUTION.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_CONFIDENTIAL_CLIENT.md  IMPLEMENTATION_SUMMARY_DYNAMIC_STREAMING.md  IMPLEMENTATION_SUMMARY_TOKEN_REFRESH.md  INTERACTIVE_CARD_ANALYSIS.md  LIBRARY_BROWSER_IMPLEMENTATION.md  MCP_COMPLETION_SUMMARY.md  MCP_FASTMCP_MIGRATION.md  (+66 more)
.devcontainer/: devcontainer.json  setup.sh
.github/: copilot-instructions.md  copilot-setup-steps.yml  copilot-workspace.yml
.github/agentskills/: yoto-api-development.md
.github/workflows/: auto-deploy-pr-to-dev.yml  cleanup-pr-environment.yml  copilot-setup-steps.yml  railway-config-sync.yml  railway-copilot-environments.yml  railway-deploy.yml  railway-development-shared.yml  railway-pr-checks.yml  railway-pr-environments.yml
.railway-locks/: .gitignore  README.md
audio_files/: README.md
cover_images/: README.md
docs/: ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  AWS_ARCH1_IMPLEMENTATION_GUIDE.md  AWS_ARCHITECTURE_DIAGRAMS.md  AWS_ARCHITECTURE_OVERVIEW.md  AWS_AUTOMATED_DEPLOYMENT_PLAN.md  AWS_COGNITO_AUTH.md  AWS_COST_OPTIMIZATION_REPORT.md  AWS_COST_QUICK_REFERENCE.md  AWS_DOCUMENTATION_INDEX.md  CLOUD_AGENT_QUICK_REF.md  CLOUD_AGENT_RAILWAY_TOKENS.md  CLOUD_AGENT_SETUP_SUMMARY.md  CODESPACES_RAILWAY_SETUP.md  COPILOT_WORKSPACE_NETWORK_CONFIG.md  CREATING_MYO_CARDS.md  DYNAMIC_STREAMING.md  EPHEMERAL_ENVIRONMENTS_QUICK_REF.md  EPHEMERAL_RAILWAY_ENVIRONMENTS.md  GETTING_STARTED.md  ICON_MANAGEMENT.md  MIGRATION_YOTO_SERVER_CLIENT_ID.md  OAUTH_CONFIDENTIAL_CLIENT.md  OAUTH_TOKEN_PERSISTENCE.md  PDF_GENERATION_README.md  PERSISTENT_STORAGE.md  PLANNING_QUESTIONS.md  PWA_MOBILE_GUIDE.md  QUICK_START.md  RAILWAY_CONFIG_SYNC.md  RAILWAY_DEPLOYMENT.md  RAILWAY_DIRECT_INSPECTION.md  RAILWAY_PR_ENVIRONMENTS_COMPARISON.md  RAILWAY_PR_ENVIRONMENTS_NATIVE.md  RAILWAY_QUICK_REF.md  RAILWAY_SHARED_DEVELOPMENT.md  RAILWAY_SHARED_VARIABLES_TROUBLESHOOTING.md  RAILWAY_TOKEN_SETUP.md  README_ARCHITECTURE.md  REQUIRED_SECRETS.md  (+11 more)
e2e/: login.spec.ts
examples/: basic_server.py  generate_sample_audio.py  icon_management.py  mqtt_listener.py  simple_client.py  streaming_myo_card.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css
infrastructure/: README.md  deploy.sh
infrastructure/cdk/: .gitignore  app.py  cdk.context.json  cdk.json
infrastructure/lambda/: handler.py  requirements.txt
infrastructure/mqtt_handler/: Dockerfile  mqtt_standalone.py  requirements.txt
infrastructure/scripts/: migrate_to_dynamodb.py
mcp-server/: README.md  TEST_RESULTS.md  pyproject.toml  server.py  test_mcp_integration.py  test_mcp_protocol.py  test_mcp_validation.py  test_server.py  test_tools.py  test_with_auth.py  test_workflow.py
scripts/: README.md  analyze_interactive_card.py  check_pr_railway_token.sh  cleanup_environment.sh  delete_llm_test_cards.py  deploy.sh  deploy_branch.sh  diagnose_railway_shared_variables.py  generate_pwa_icons.py  get_deployment_environment.py  list_audio_files.py  migrate_audio_to_s3.py  provision_pr_railway_token.sh  railway_ephemeral_env.sh  railway_inspect.py  resolve_base_url.py  submit_interactive_card.py  test_card_creation.py  test_deployment_setup.py  test_railway_access.sh  validate_pr_environment.py  validate_railway_mcp.sh
tests/: __init__.py  test_api_endpoints.py  test_audio_recorder.py  test_branch_detection.py  test_config.py  test_dynamic_streaming.py  test_dynamodb_integration.py  test_examples.py  test_get_deployment_endpoint.py  test_mqtt_timezone.py  test_pwa.py  test_settings_api.py  test_streaming_example.py  test_token_persistence.py  test_token_refresh.py  test_transcript_api.py  test_transcription.py  test_tts_generation.py  test_ui_admin_audio_library.py  test_user_auth.py
tests/icons/: __init__.py  test_client.py  test_models.py  test_service.py
yoto_smart_stream/: __init__.py  __main__.py  auth.py  auth_cognito.py  config.py  database.py  models.py
yoto_smart_stream/api/: app.py  dependencies.py  dependencies_new.py  mqtt_event_store.py  stream_manager.py  utils.py
yoto_smart_stream/core/: __init__.py  audio_db.py  oauth_client.py  polly_tts.py  transcription.py  yoto_client.py
yoto_smart_stream/icons/: __init__.py  client.py  models.py  service.py
yoto_smart_stream/utils/: s3.py  (+3 more)
(+165 files in other folders)
