[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yoto-library-mcp"
version = "0.1.0"
description = "MCP server for querying Yoto card library"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Yoto Smart Stream", email = "your.email@example.com"}
]
keywords = ["mcp", "yoto", "library", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=0.9.0",
    "httpx>=0.25.0",
    "pydantic>=2.4.0",
]

[project.urls]
Homepage = "https://github.com/earchibald/yoto-smart-stream"
Repository = "https://github.com/earchibald/yoto-smart-stream"

[project.scripts]
mcp-server = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
